# teleport-worker

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: commands.rs  main.rs
data/pki/: README.md  server-ca-cert.pem  server-ca-cert.srl  server-ca-key.pem  server-cert.pem  server-csr.pem  server-key-pkcs8.pem  server-key.pem  user-ca-cert.pem  user-ca-cert.srl  user-ca-key.pem  user1-cert.cnf  user1-cert.pem  user1-csr.pem  user1-key-pkcs8.pem  user1-key.pem  user2-cert.cnf  user2-cert.pem  user2-csr.pem  user2-key-pkcs8.pem  user2-key.pem
proto/: Cargo.toml  build.rs
proto/protos/: worker.proto
proto/src/: lib.rs
service/: Cargo.toml
service/src/: main.rs
service/src/imp/: handler.rs  identity.rs  jobs.rs  mod.rs
service/tests/: service.rs  tls.rs
