[package]
name = "client"
version = "0.1.0"
authors = ["Krisztian Kovacs <kkovaacs@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
proto = { path = "../proto" }
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["full"] }
tonic = { version = "0.4.0", features = ["tls"] }
