[package]
name = "service"
version = "0.1.0"
authors = ["Krisztian Kovacs <kkovaacs@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
futures = "0.3.13"
library = { path = "../library" }
openssl = "0.10.32"
proto = { path = "../proto" }
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.3"
tonic = { version = "0.4.0", features = ["tls"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
tryhard = "0.3.0"
